# pygra

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  PyGRA.spec  README.md  environment.yml  install_icon_linux.sh  pygra.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: build.yml  ci.yml
docs/source/: cli.rst  conf.py  download.rst  index.rst  installation.rst  usage.rst
logo/: pygra_icon.icns
pygra/: __init__.py  constants.py  dataset.py  dialogs.py  dialogs_analysis.py  dialogs_misc.py  dialogs_style.py  fitting.py  main.py  mainwindow.py  palettes.py  plot_engine.py  preferences.py  state.py  widgets.py
tests/: test_cli.py  test_dataset.py  test_fitting.py
